--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appy-next",
+  "name": "Blendify-next",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -26,6 +26,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "swiper": "^8.4.7",
     "typescript": "^5.3.3"
   },
